# mcux-openvg

./: CMakeLists.txt  Kconfig  OpenVG_Only.bat  README.md  SCR.txt  build-rt1170.sh  build_linux.sh  common.node  common.target  makefile.linux  makefile.linux.def  mcux.cmake  openvg_only.sln  sdram_debug.cmake  sdram_release.cmake
bsp/2.15.x/: FreeRTOSConfig.h  display_support.h
include/EGL/: APACHE-2_LICENSE  eglplatform.h  eglvivante.h
include/VDK/: gc_vdk.h  gc_vdk_types.h
include/VG/: openvg.h
include/Vivante/: vg_context.h  vg_defs.h  vg_image.h  vg_math.h
src/: makefile.linux  vg_api.c  vg_context.c  vg_egl.c  vg_egl_freertos.c  vg_egl_linux.c  vg_egl_wayland.c  vg_egl_win32.c  vg_image.c  vg_vgu.c
test/: build_linux.sh  makefile.linux  makefile.linux.def  makefile.linux.def.emulator  makefile.linux.emulator
test/01_ClearTarget/: ClearTarget.c  ClearTarget.sln  ClearTarget.vcxproj  ClearTarget.vcxproj.filters  makefile.linux  makefile.linux.emulator  makefile.null
test/02_LetterA/: LetterA.c  LetterA.sln  LetterA.vcxproj  LetterA.vcxproj.filters  makefile.linux  makefile.linux.emulator  makefile.null
test/03_TSOverflow/: TSOverflow.c  TSOverflow.sln  TSOverflow.vcxproj  TSOverflow.vcxproj.filters  makefile.linux  makefile.linux.emulator  makefile.null
test/tiger/: Tiger.sln  Tiger.vcxproj  Tiger.vcxproj.filters  main.c  makefile.linux  makefile.linux.emulator  makefile.null  tiger.c  tiger.h
vdk/: fullscreen-shell-unstable-v1-client-protocol.h  fullscreen-shell-unstable-v1-protocol.c  gc_os_win32.c  gc_vdk_egl.c  gc_vdk_fbdev.c  gc_vdk_win32.c  libVDK.map  makefile.linux  xdg-shell-client-protocol.h  xdg-shell-protocol.c
